--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -22,14 +22,21 @@
     <div class="title">
       <a href="/">{{ site.title }}</a>
       <a class="extra" href="/archive.html">Archive</a>
+      
+      <!--
       <a class="extra" href="/pages.html">Pages</a>
       <a class="extra" href="/categories.html">Categories</a>
       <a class="extra" href="/tags.html">Tags</a>
+      -->
+      
+      
     </div>
   
     {{ content }}
   
     <div class="footer">
+    
+    <!-- 
       <div class="contact">
         <p>
           {{ site.author.name }}<br />
@@ -37,18 +44,27 @@
           {{ site.author.email }}
         </p>
       </div>
+      -->
+      
       <div class="contact">
         <p>
+        "It's amazing how productive doing nothing can be." -- Kevin Flynn, TRON: Legacy <br>
+        GitHub&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/4E71">github.com/4E71</a>
+        
+        <!-- 
           <a href="http://github.com/{{ site.author.github }}/">github.com/{{ site.author.github }}</a><br />
           <a href="http://twitter.com/{{ site.author.twitter }}/">twitter.com/{{ site.author.twitter }}</a><br />
-          <a href="http://flickr.com/photos/username/">flickr.com/photos/username</a>
+          <a href="http://flickr.com/photos/username/">flickr.com/photos/username</a> 
+        -->
         </p>
       </div>
+      <!-- 
       <div class="rss">
         <a href="http://feeds.feedburner.com/username">
           <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
         </a>
       </div>
+      -->
     </div>
   </div>
   <a href="http://github.com/{{ site.author.github }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
